Scrollbar fixes

--- a/web/css/source/_layout.less
+++ b/web/css/source/_layout.less
@@ -33,7 +33,6 @@
 
 .dna-root-vars(@media-target) when (@media-target='critical'){
     scroll-behavior: smooth;
-    --scrollbar-width: @scrollbar__size;
     .dna-scrollbar();
 }
 & when (@media-target='critical') {
